--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,13 @@
 
     </include>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/entryView"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="400dp"
         android:layout_below="@id/mainToolbar"
+        android:background="@color/colorPrimaryDark"
         android:padding="4dp"/>
 
     <TextView
@@ -27,7 +28,10 @@
         android:layout_below="@id/entryView"
         android:layout_alignParentStart="true"
         android:layout_marginTop="24dp"
-        android:text="@string/your_average" />
+        android:text="@string/your_average"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/calcAvg"
@@ -37,7 +41,10 @@
         android:layout_marginTop="24dp"
         android:layout_toEndOf="@id/Average"
         android:layout_marginStart="12dp"
-        android:text="@string/calculated_average" />
+        android:text="@string/Total"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/calculator_Launcher"
